# freelance_django

./: .env  pyproject.toml
apps/: admin.py  models.py  permission.py  serializers.py  signals.py  urls.py
apps/migrations/: 0001_initial.py
apps/serializers/: __init__.py  b_owner.py  freelance.py  user.py
apps/tests/: test_filters.py
apps/views/: __init__.py  auth.py  b_owner.py  freelance.py  user.py
root/: settings.py  urls.py
